# omega

./: .appveyor.yml  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Omega.sln  omega.natvis
CLI/: CLI.c  CLI.vcxproj  CLI.vcxproj.filters  Expression.c  Expression.h  Interpreter.c  Interpreter.h  Lexer.c  Lexer.h  Types.c  Types.h
CLI/samples/: demo.omega  other.omega
Language/: AST.c  AST.h  Builder.c  Builder.h  Interpreter.c  Interpreter.h  Language.vcxproj  Lexer.c  Lexer.h  Parser.c  Parser.h  Types.c  Types.h
Machine/: Execution.c  Execution.h  Machine.c  Machine.h  machine.vcxproj
Parser/: AST.c  AST.h  Lexer.c  Lexer.h  Parser.c  Parser.h  Parser.vcxproj
Support/: Console.c  Console.h  Dynamic.c  Dynamic.h  File.c  File.h  Map.c  Map.h  Native_Call.asm  Native_Call.h  Panic.c  Panic.h  Performance.c  Performance.h  Stack.c  Stack.h  String.c  String.h  Support.vcxproj  UCD.py  Unicode.c  Unicode.h
include/Interpreter/: Expression.h  Interpreter.h  Lexer.h  Types.h
include/Machine/: Execution.h  Machine.h
include/Structures/: Map.h
include/Utility/: Console.h  Dynamic.h  File.h  Native_Call.h  Panic.h  Standard.h  String.h  Unicode.h
samples/: test.omega
scripts/: UCD.py
source/: CLI.c
source/Interpreter/: Expression.c  Expression.h  Interpreter.c  Interpreter.h  Lexer.c  Lexer.h  Machine.c  Machine.h  Types.c  Types.h
source/Machine/: Call.asm  Call.h  Concept.txt  Execution.c  Execution.h  Machine.c  Machine.h  Native_Call.asm  Native_Call.h
source/Structures/: Map.c  Map.h  Stack.c  Stack.h
source/Utility/: Console.c  Console.h  Dynamic.c  File.c  File.h  Native_Call.asm  Panic.c  Performance.c  Performance.h  Standard.h  String.c  String.h  Unicode.c
tests/: Machine.c
